src/objects/ACCL__Account_Opening_Hours__c.object
<CustomObject>
    <description>Holds the details of the relationship between customer and the opening hours.</description>
    <fields>
        <fullName>ACCL__Account__c</fullName>
        <description>Reference to customer.</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Opening Hours</relationshipLabel>
        <relationshipName>Account_Opening_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Fri__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Friday.</description>
        <label>Fri</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Mon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Monday.</description>
        <label>Mon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the Customer Opening Hours record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sat__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Saturday.</description>
        <label>Sat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sun__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sunday.</description>
        <label>Sun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Thu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Thursday.</description>
        <label>Thu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Time_From__c</fullName>
        <description>From this time on the entry is valid.
Validates if a user has entered the time in the correct format (hh:mm and ranges 00:00-23:59).</description>
        <inlineHelpText>Valid Time format: hh:mm (valid range: 00:00 to 23:59)</inlineHelpText>
        <label>Time From</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Time_Thru__c</fullName>
        <description>Until this time the entry is valid.
Validates if a user has entered the time in the correct format (hh:mm and ranges 00:00-23:59).</description>
        <inlineHelpText>Valid Time format: hh:mm (valid range: 00:00 to 23:59)</inlineHelpText>
        <label>Time Thru</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Tue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tuesday.</description>
        <label>Tue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Wed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wednesday.</description>
        <label>Wed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Opening Hours</label>
    <nameField>
        <displayFormat>COH-{0000}</displayFormat>
        <label>Customer Opening Hours Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Opening Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Time_Begin_End_Format_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND( 
NOT(ISBLANK(ACCL__Time_From__c)), 
NOT(REGEX(ACCL__Time_From__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;)) 
), 
AND( 
NOT(ISBLANK(ACCL__Time_Thru__c)), 
NOT(REGEX(ACCL__Time_Thru__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;)) 
) 
)</errorConditionFormula>
        <errorMessage>Please enter the correct format for Time From and Time Thru (hh:mm).</errorMessage>
    </validationRules>
</CustomObject>